--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -14,60 +18,75 @@
 <div class='textbox'>What are the criteria for 'normal' and 'abnormal'? And what is the criterion for dividing 'disabled' and 'non-disabled'?...📢</div>
 
 
-
 <div class="main">
-  <div class="container" style="--cards: 5">
-    <img class="zoom hidden" src="1.jpg">
-    <img class="small zoom" src="1.jpg">
-      <img class="small zoom" src="2.jpg">
-      <img class="small zoom" src="3.jpg">
-      <img class="small zoom" src="1.jpg">
-      <img class="small zoom" src="2.jpg">
+  <div class="container" style="--cards:6">
+    <img class="zoom hidden" src="o.jpg">
+    <img class="small zoom" src="o.jpg">
+      <img class="small zoom" src="y.jpg">
+      <img class="small zoom" src="p.jpg">
+
+      <img class="small zoom" src="p.jpg">
+
+      <img class="small zoom" src="g.jpg">
+      <img class="small zoom" src="pp.jpg">
   </div>
 
-  <div class="container" style="--cards: 5">
-    <img class="zoom hidden" src="2.jpg">
-    <img class="small zoom" src="2.jpg">
-      <img class="small zoom" src="1.jpg" >
+  <div class="container" style="--cards: 6">
+    <img class="zoom hidden" src="y.jpg">
+    <img class="small zoom" src="y.jpg">
+      <img class="small zoom" src="p.jpg" >
+      <img class="small zoom" src="g.jpg">
+
       <img class="small zoom" src="3.jpg">
-      <img class="small zoom" src="2.jpg">
-      <img class="small zoom" src="1.jpg">
+
+      <img class="small zoom" src="b.jpg">
+      <img class="small zoom" src="o.jpg">
   </div>
 
-  <div class="container" style="--cards: 5">
-    <img class="zoom hidden" src="1.jpg">
-    <img class="small zoom" src="1.jpg">
-      <img class="small zoom" src="2.jpg" >
+  <div class="container" style="--cards: 6">
+    <img class="zoom hidden" src="p.jpg">
+    <img class="small zoom" src="p.jpg">
+      <img class="small zoom" src="g.jpg" >
+      <img class="small zoom" src="b.jpg">
+
       <img class="small zoom" src="3.jpg">
-      <img class="small zoom" src="1.jpg">
-      <img class="small zoom" src="2.jpg">
+
+      <img class="small zoom" src="p.jpg">
+      <img class="small zoom" src="y.jpg">
   </div>
 
-  <div class="container" style="--cards: 5">
-    <img class="zoom hidden" src="1.jpg">
-    <img class="small zoom" src="1.jpg">
-      <img class="small zoom" src="2.jpg" >
+  <div class="container" style="--cards: 6">
+    <img class="zoom hidden" src="g.jpg">
+    <img class="small zoom" src="g.jpg">
+      <img class="small zoom" src="b.jpg" >
+      <img class="small zoom" src="p.jpg">
+
       <img class="small zoom" src="3.jpg">
-      <img class="small zoom" src="1.jpg">
-      <img class="small zoom" src="3.jpg">
+
+      <img class="small zoom" src="o.jpg">
+      <img class="small zoom" src="p.jpg">
   </div>
 
-  <div class="container" style="--cards: 5">
-    <img class="zoom hidden" src="2.jpg">
-    <img class="small zoom" src="2.jpg">
-      <img class="small zoom" src="1.jpg" >
+  <div class="container" style="--cards: 6">
+    <img class="zoom hidden" src="b.jpg">
+    <img class="small zoom" src="b.jpg">
+      <img class="small zoom" src="p.jpg" >
+      <img class="small zoom" src="o.jpg">
+
       <img class="small zoom" src="3.jpg">
-      <img class="small zoom" src="1.jpg">
-      <img class="small zoom" src="1.jpg">
+      <img class="small zoom" src="y.jpg">
+      <img class="small zoom" src="g.jpg">
   </div>
 
-  <div class="container" style="--cards: 5">
-    <img class="zoom hidden" src="1.jpg">
-    <img class="small zoom" src="1.jpg">
-      <img class="small zoom" src="2.jpg" >
+  <div class="container" style="--cards: 6">
+    <img class="zoom hidden" src="pp.jpg">
+    <img class="small zoom" src="pp.jpg">
+      <img class="small zoom" src="o.jpg" >
+      <img class="small zoom" src="y.jpg">
+
       <img class="small zoom" src="3.jpg">
-      <img class="small zoom" src="1.jpg">
-      <img class="small zoom" src="2.jpg">
+      <img class="small zoom" src="p.jpg">
+      <img class="small zoom" src="b.jpg">
   </div>
 
 </div>
