--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <div class='textbox'>What are the criteria for 'normal' and 'abnormal'? And what is the criterion for dividing 'disabled' and 'non-disabled'?...📢</div>
 
-
 <div class="main">
   <div class="container" style="--cards:6">
     <img class="zoom hidden" src="o.jpg">
@@ -51,7 +50,7 @@
 
       <img class="small zoom" src="3.jpg">
 
-      <img class="small zoom" src="p.jpg">
+      <img class="small zoom" src="pp.jpg">
       <img class="small zoom" src="y.jpg">
   </div>
 
@@ -59,7 +58,7 @@
     <img class="zoom hidden" src="g.jpg">
     <img class="small zoom" src="g.jpg">
       <img class="small zoom" src="b.jpg" >
-      <img class="small zoom" src="p.jpg">
+      <img class="small zoom" src="pp.jpg">
 
       <img class="small zoom" src="3.jpg">
 
@@ -70,7 +69,7 @@
   <div class="container" style="--cards: 6">
     <img class="zoom hidden" src="b.jpg">
     <img class="small zoom" src="b.jpg">
-      <img class="small zoom" src="p.jpg" >
+      <img class="small zoom" src="pp.jpg" >
       <img class="small zoom" src="o.jpg">
 
       <img class="small zoom" src="3.jpg">
@@ -91,6 +90,13 @@
 
 </div>
 
+<div class="bottom">
+  <img class="side draggable" src="small.png">
+</div>
+
+
+
+<canvas id="myCanvas" resize></canvas>
 
 <script src="jquery-3.6.0.min.js"></script>
 <script
@@ -105,8 +111,6 @@
 <br>
 
   <!-- <img class="zoom" src="1.5.jpg" width="150"> -->
-
-<body>
 
 </body>
 </html>
