--- a/index.html
+++ b/index.html
@@ -87,14 +87,40 @@
       <img class="small zoom" src="p.jpg">
       <img class="small zoom" src="b.jpg">
   </div>
+  <br>
 
 </div>
 
-<div class="bottom">
-  <img class="side draggable" src="small.png">
-</div>
+  <div class="keyboard" style="text-align: center;">
 
+  <div class="number">
+    <span class="kf" data-hover=>1</span>
+    <span class="kb"</span>
+  </div>
 
+  <div class="number">
+    <span class="kf2" data-hover=>2</span>
+    <span class="kb"</span>
+  </div>
+
+  <div class="number">
+    <span class="kf3" data-hover=>3</span>
+    <span class="kb"</span>
+  </div>
+
+  <div class="number">
+    <span class="kf4" data-hover=>4</span>
+    <span class="kb"</span>
+  </div>
+
+  <div class="number">
+    <span class="kf5" data-hover=>5</span>
+    <span class="kb"</span>
+  </div>
+
+  </div>
+
+<!-- <span class="special">here</span><img class="hidden" src="p2.jpg" width="700"></p> -->
 
 <canvas id="myCanvas" resize></canvas>
 
@@ -108,9 +134,9 @@
 <script type="text/paperscript" canvas="myCanvas" src="sketch.js"></script>
 <script src="functions.js"></script>
 
-<br>
-
-  <!-- <img class="zoom" src="1.5.jpg" width="150"> -->
-
 </body>
 </html>
+
+<!-- <div class="bottom">
+  <img class="side draggable" src="small.png">
+</div> -->
