--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
     <span class="kb"</span>
   </div>
 
+  <div class="number">
+    <span class="kf6" data-hover=>6</span>
+    <span class="kb"</span>
+  </div>
+
   </div>
 
 <!-- <span class="special">here</span><img class="hidden" src="p2.jpg" width="700"></p> -->
