--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 <div class='textbox'>What are the criteria for 'normal' and 'abnormal'? And what is the criterion for dividing 'disabled' and 'non-disabled'?...📢</div>
 
+<div class="text">
+  <span>x</span>
+    Hello, thank you for visiting this website.
+</div>
+
 <div class="main">
   <div class="container" style="--cards:6">
     <img class="zoom hidden" src="o.jpg">
@@ -88,42 +93,41 @@
       <img class="small zoom" src="b.jpg">
   </div>
   <br>
+</div>
+
+<div class="keyboard">
+<div class="number">
+  <span class="kf key"  data-hover="">1</span>
+  <span class="kb"></span>
+</div>
+
+<div class="number">
+  <span class="kf2 key" data-hover="">2</span>
+  <span class="kb"></span>
+</div>
+
+<div class="number">
+  <span class="kf3 key" data-hover="">3</span>
+  <span class="kb"></span>
+</div>
+
+<div class="number">
+  <span class="kf4 key" data-hover="">4</span>
+  <span class="kb"></span>
+</div>
+
+<div class="number">
+  <span class="kf5 key" data-hover="">5</span>
+  <span class="kb"></span>
+</div>
+
+<div class="number">
+  <span class="kf6 key" data-hover="">6</span>
+  <span class="kb"></span>
+</div>
 
 </div>
 
-  <div class="keyboard" style="text-align: center;">
-
-  <div class="number">
-    <span class="kf" data-hover=>1</span>
-    <span class="kb"</span>
-  </div>
-
-  <div class="number">
-    <span class="kf2" data-hover=>2</span>
-    <span class="kb"</span>
-  </div>
-
-  <div class="number">
-    <span class="kf3" data-hover=>3</span>
-    <span class="kb"</span>
-  </div>
-
-  <div class="number">
-    <span class="kf4" data-hover=>4</span>
-    <span class="kb"</span>
-  </div>
-
-  <div class="number">
-    <span class="kf5" data-hover=>5</span>
-    <span class="kb"</span>
-  </div>
-
-  <div class="number">
-    <span class="kf6" data-hover=>6</span>
-    <span class="kb"</span>
-  </div>
-
-  </div>
 
 <!-- <span class="special">here</span><img class="hidden" src="p2.jpg" width="700"></p> -->
 
