--- a/index.html
+++ b/index.html
@@ -17,10 +17,30 @@
 
 <div class='textbox'>What are the criteria for 'normal' and 'abnormal'? And what is the criterion for dividing 'disabled' and 'non-disabled'?...📢</div>
 
-<div class="text">
+<!-- <div class="text">
   <span>x</span>
-    Hello, thank you for visiting this website.
+    Hello, take your time exploring this website.
+</div> -->
+
+<div class="text">
+  <span>close</span>
+    Hello, take your time exploring this website.
 </div>
+
+<!-- <div class="top">
+<h1 contenteditable>
+  HELLO, THANKS FOR STOPPING BY
+</h1>
+
+<svg>
+  <defs>
+    <filter id="flyOn">
+      <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3"/>
+  <feDisplacementMap in="SourceGraphic" in2="noise" scale="15" />
+    </filter>
+  </defs>
+</svg>
+</div> -->
 
 <div class="main">
   <div class="container" style="--cards:6">
